global: fix the visibility of custom app bg image
Seems like native dark mode removes the "stripe" background entirely by
removing the `content` rule, and with it this functionality goes away.

This fix will revert that behavior whenever native dark mode lands.

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1147,7 +1147,9 @@ ac5 = var(--ac-5)
                 background-position: var(--bg-pos) i
                 background-repeat: var(--bg-rep) i
                 background-size: var(--bg-size) i
+                content: '' i
             } else if ( app_image == default ) {
+                content: '' i
                 c: 0 0 bg1
             } else {
                 display: none
